--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,10 @@ body {
     background-color: #f2f2f2;
   }
   
+  a:visited{
+    color: #0d69f2;
+  }
+
   .container {
       width: 300px;
       margin: 0 auto;
@@ -46,13 +50,18 @@ body {
   input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #0d69f2;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
+  input[type="submit"]:hover{
+    transition: 0.2s;
+    background-color: #0B5ED7
+  }
+
   .login {
     text-align: center;
   }
